[gd_scene load_steps=9 format=2]

[ext_resource path="res://assets/graphics/index.png" type="Texture" id=1]
[ext_resource path="res://trolley.gd" type="Script" id=2]
[ext_resource path="res://assets/themes/light/theme.tres" type="Theme" id=3]
[ext_resource path="res://assets/graphics/Page.png" type="Texture" id=4]
[ext_resource path="res://assets/graphics/Equations.png" type="Texture" id=6]
[ext_resource path="res://elements/NextStep.gd" type="Script" id=7]

[sub_resource type="CircleShape2D" id=1]
radius = 61.0082

[sub_resource type="StyleBoxFlat" id=2]
bg_color = Color( 1, 1, 1, 1 )
border_width_top = 1
border_color = Color( 0, 0, 0, 1 )

[node name="Classical" type="ColorRect"]
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 3 )
script = ExtResource( 2 )

[node name="ball" type="RigidBody2D" parent="."]
position = Vector2( 80, 440 )
gravity_scale = 0.0
linear_velocity = Vector2( 1, 0 )

[node name="Sprite" type="Sprite" parent="ball"]
scale = Vector2( 0.584475, 0.584475 )
texture = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="ball"]
shape = SubResource( 1 )

[node name="HSlider" type="HSlider" parent="."]
margin_left = 75.0
margin_top = 512.0
margin_right = 942.0
margin_bottom = 528.0
custom_styles/slider = SubResource( 2 )
min_value = 80.0
max_value = 936.0
value = 80.0

[node name="Start" type="Button" parent="."]
pause_mode = 2
margin_left = 16.0
margin_top = 559.0
margin_right = 141.0
margin_bottom = 579.0
text = "Sstart Experiment"

[node name="Label" type="Label" parent="."]
margin_left = 749.0
margin_top = 525.0
margin_right = 947.0
margin_bottom = 552.0
theme_type_variation = "Header"
text = "Displacement (X) -------------->"

[node name="Time" type="Label" parent="."]
margin_left = 90.0
margin_top = 519.0
margin_right = 299.0
margin_bottom = 546.0
theme_type_variation = "Header"
custom_colors/font_color = Color( 0.933333, 0.0313726, 0.0117647, 1 )
text = "Time Elapsed T = 0 Seconds"

[node name="Expected" type="ColorRect" parent="."]
visible = false
margin_left = 490.0
margin_top = 347.0
margin_right = 500.0
margin_bottom = 541.0
color = Color( 0.45, 1, 0, 0.4 )

[node name="Expected" type="Label" parent="Expected"]
margin_left = -98.0
margin_top = 200.0
margin_right = 111.0
margin_bottom = 227.0
theme_type_variation = "Header"
custom_colors/font_color = Color( 0.14902, 1, 0, 1 )
text = "Expected at T = 5 seconds"
align = 1

[node name="StartPosition" type="ColorRect" parent="."]
margin_left = 77.0
margin_top = 347.0
margin_right = 87.0
margin_bottom = 541.0
color = Color( 0.968627, 0, 1, 0.4 )

[node name="ColorRect2" type="ColorRect" parent="."]
margin_left = 608.0
margin_top = 36.0
margin_right = 995.0
margin_bottom = 455.0
color = Color( 0.784314, 0.784314, 0.784314, 1 )
__meta__ = {
"_editor_description_": ""
}

[node name="ColorRect3" type="ColorRect" parent="."]
margin_left = 5.0
margin_top = 43.0
margin_right = 558.0
margin_bottom = 213.0
color = Color( 0.784314, 0.784314, 0.784314, 1 )
__meta__ = {
"_editor_description_": ""
}

[node name="ColorRect4" type="ColorRect" parent="."]
margin_left = 5.0
margin_top = 217.0
margin_right = 558.0
margin_bottom = 323.0
color = Color( 0.784314, 0.784314, 0.784314, 1 )
__meta__ = {
"_editor_description_": ""
}

[node name="Page" type="Sprite" parent="."]
pause_mode = 2
position = Vector2( 273, 131 )
scale = Vector2( 0.284708, 0.284708 )
texture = ExtResource( 4 )
vframes = 5
script = ExtResource( 7 )

[node name="FlashPage" type="ColorRect" parent="Page"]
pause_mode = 2
margin_left = -945.0
margin_top = -320.0
margin_right = 1008.0
margin_bottom = 292.0
color = Color( 0.913725, 0.913725, 0.913725, 0 )
__meta__ = {
"_editor_description_": ""
}

[node name="Tween" type="Tween" parent="Page"]
pause_mode = 2

[node name="Rough" type="Sprite" parent="."]
pause_mode = 2
position = Vector2( 804, 244 )
scale = Vector2( 0.210986, 0.188732 )
vframes = 3
script = ExtResource( 7 )

[node name="FlashRough" type="ColorRect" parent="Rough"]
pause_mode = 2
margin_left = -934.0
margin_top = -1112.0
margin_right = 919.0
margin_bottom = 1113.0
color = Color( 0.913725, 0.913725, 0.913725, 0 )
__meta__ = {
"_editor_description_": ""
}

[node name="Tween" type="Tween" parent="Rough"]
pause_mode = 2

[node name="Equations" type="Sprite" parent="."]
pause_mode = 2
position = Vector2( 267, 268 )
scale = Vector2( 0.257746, 0.257746 )
texture = ExtResource( 6 )
vframes = 3
script = ExtResource( 7 )

[node name="FlashEquations" type="ColorRect" parent="Equations"]
pause_mode = 2
margin_left = -1028.0
margin_top = -198.0
margin_right = 1129.0
margin_bottom = 217.0
color = Color( 0.913725, 0.913725, 0.913725, 0 )
__meta__ = {
"_editor_description_": ""
}

[node name="Tween" type="Tween" parent="Equations"]
pause_mode = 2

[node name="NextStep" type="Button" parent="."]
pause_mode = 2
margin_left = 491.0
margin_top = 328.0
margin_right = 555.0
margin_bottom = 351.0
text = "Next Step"

[node name="NextSlide" type="Button" parent="."]
pause_mode = 2
margin_left = 931.0
margin_top = 483.0
margin_right = 997.0
margin_bottom = 506.0
text = "Next Slide"

[connection signal="pressed" from="Start" to="." method="_on_Start_pressed"]
[connection signal="pressed" from="NextStep" to="." method="_on_NextStep_pressed"]
[connection signal="pressed" from="NextSlide" to="." method="_on_NextSlide_pressed"]
